--- a/index.html
+++ b/index.html
@@ -9,19 +9,13 @@
   <button onclick="handleAuthClick()">Login & Download Sebago Files</button>
 
   <script>
-    const CLIENT_ID = "YOUR_CLIENT_ID.apps.googleusercontent.com"; // replace
-    const API_KEY = "YOUR_API_KEY"; // replace
+    const CLIENT_ID = "498439509813-rq2ag07rk3pmh1pjflhfrsisphtgq4qc.apps.googleusercontent.com"; // your OAuth client ID
     const SCOPES = "https://www.googleapis.com/auth/drive.readonly";
     const DISCOVERY_DOCS = ["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"];
 
-    let gapiInited = false;
-    let gisInited = false;
-
-    // Load auth2 and Drive API
     function handleAuthClick() {
       gapi.load("client:auth2", async () => {
         await gapi.client.init({
-          apiKey: API_KEY,
           clientId: CLIENT_ID,
           discoveryDocs: DISCOVERY_DOCS,
           scope: SCOPES,
@@ -47,12 +41,14 @@
       const zip = new JSZip();
 
       for (let file of files) {
-        const content = await gapi.client.drive.files.get({
+        // Download file content
+        const response = await gapi.client.drive.files.get({
           fileId: file.id,
           alt: "media"
         });
 
-        zip.file(file.name, content.body);
+        // Save into ZIP
+        zip.file(file.name, response.body);
       }
 
       const blob = await zip.generateAsync({ type: "blob" });
