--- a/index.html
+++ b/index.html
@@ -1,34 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Sebago File Extractor</title>
+  <title>Sebago File Extractor (GIS)</title>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
   <script src="https://apis.google.com/js/api.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
 </head>
 <body>
-  <button onclick="handleAuthClick()">Login & Download Sebago Files</button>
+  <button id="loginBtn">Login & Download Sebago Files</button>
 
   <script>
-    const CLIENT_ID = "498439509813-rq2ag07rk3pmh1pjflhfrsisphtgq4qc.apps.googleusercontent.com"; // your OAuth client ID
+    const CLIENT_ID = "YOUR_CLIENT_ID.apps.googleusercontent.com";
     const SCOPES = "https://www.googleapis.com/auth/drive.readonly";
     const DISCOVERY_DOCS = ["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"];
 
-    function handleAuthClick() {
-      gapi.load("client:auth2", async () => {
-        await gapi.client.init({
-          clientId: CLIENT_ID,
-          discoveryDocs: DISCOVERY_DOCS,
-          scope: SCOPES,
-        });
+    let tokenClient;
 
-        const GoogleAuth = gapi.auth2.getAuthInstance();
-        GoogleAuth.signIn().then(listAndDownloadFiles);
+    // Load Drive API
+    function gapiLoaded() {
+      gapi.load('client', async () => {
+        await gapi.client.init({
+          discoveryDocs: DISCOVERY_DOCS
+        });
       });
     }
 
+    window.onload = () => {
+      // Initialize token client
+      tokenClient = google.accounts.oauth2.initTokenClient({
+        client_id: CLIENT_ID,
+        scope: SCOPES,
+        callback: async (response) => {
+          if (response.error) throw(response);
+          await listAndDownloadFiles();
+        },
+      });
+
+      document.getElementById("loginBtn").onclick = () => {
+        tokenClient.requestAccessToken();
+      };
+
+      gapiLoaded();
+    };
+
     async function listAndDownloadFiles() {
       const res = await gapi.client.drive.files.list({
-        q: "name contains 'Sebago' and mimeType='application/vnd.openxmlformats-officedocument.spreadsheetml.sheet'",
+        q: "name contains 'Sebago' and mimeType contains 'spreadsheet'",
         fields: "files(id, name)"
       });
 
@@ -41,13 +58,10 @@
       const zip = new JSZip();
 
       for (let file of files) {
-        // Download file content
         const response = await gapi.client.drive.files.get({
           fileId: file.id,
           alt: "media"
         });
-
-        // Save into ZIP
         zip.file(file.name, response.body);
       }
 
