--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <button id="loginBtn">Login & Download Sebago Files</button>
 
   <script>
-    const CLIENT_ID = "YOUR_CLIENT_ID.apps.googleusercontent.com";
+    const CLIENT_ID = "498439509813-rq2ag07rk3pmh1pjflhfrsisphtgq4qc.apps.googleusercontent.com";
     const SCOPES = "https://www.googleapis.com/auth/drive.readonly";
     const DISCOVERY_DOCS = ["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"];
 
